JumpScript/tests/baselines/reference/derivedClassSuperCallsInNonConstructorMembers.errors.txt
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(8,8): error TS2304: Cannot find name 'super'.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(8,13): error TS1005: ';' expected.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(8,14): error TS1109: Expression expected.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(9,5): error TS2304: Cannot find name 'b'.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(9,9): error TS1005: ';' expected.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(10,9): error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(12,5): error TS2304: Cannot find name 'get'.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(12,9): error TS1005: ';' expected.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(12,9): error TS2304: Cannot find name 'C'.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(12,13): error TS1005: ';' expected.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(13,9): error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(16,5): error TS2304: Cannot find name 'set'.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(16,5): error TS7027: Unreachable code detected.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(16,9): error TS1005: ';' expected.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(16,9): error TS2304: Cannot find name 'C'.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(16,11): error TS2304: Cannot find name 'v'.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(16,14): error TS1005: ';' expected.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(17,9): error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(20,5): error TS1128: Declaration or statement expected.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(20,15): error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(21,5): error TS1128: Declaration or statement expected.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(21,12): error TS2304: Cannot find name 'b'.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(21,16): error TS1005: ';' expected.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(22,9): error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(24,5): error TS1128: Declaration or statement expected.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(24,12): error TS2304: Cannot find name 'get'.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(24,16): error TS1005: ';' expected.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(24,16): error TS2304: Cannot find name 'C'.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(24,20): error TS1005: ';' expected.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(25,9): error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(28,5): error TS1128: Declaration or statement expected.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(28,12): error TS2304: Cannot find name 'set'.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(28,16): error TS1005: ';' expected.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(28,16): error TS2304: Cannot find name 'C'.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(28,18): error TS2304: Cannot find name 'v'.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(28,21): error TS1005: ';' expected.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(29,9): error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump(31,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.jump (38 errors) ====
    // error to use super calls outside a constructor
    
    class Base {
        x: string;
    }
    
    class Derived extends Base {
        a: super();
           ~~~~~
!!! error TS2304: Cannot find name 'super'.
                ~
!!! error TS1005: ';' expected.
                 ~
!!! error TS1109: Expression expected.
        b() {
        ~
!!! error TS2304: Cannot find name 'b'.
            ~
!!! error TS1005: ';' expected.
            super();
            ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
        }
        get C() {
        ~~~
!!! error TS2304: Cannot find name 'get'.
            ~
!!! error TS1005: ';' expected.
            ~
!!! error TS2304: Cannot find name 'C'.
                ~
!!! error TS1005: ';' expected.
            super();
            ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
            return 1;
        }
        set C(v) {
        ~~~
!!! error TS2304: Cannot find name 'set'.
        ~~~
!!! error TS7027: Unreachable code detected.
            ~
!!! error TS1005: ';' expected.
            ~
!!! error TS2304: Cannot find name 'C'.
              ~
!!! error TS2304: Cannot find name 'v'.
                 ~
!!! error TS1005: ';' expected.
            super();
            ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
        }
    
        static a: super();
        ~~~~~~
!!! error TS1128: Declaration or statement expected.
                  ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
        static b() {
        ~~~~~~
!!! error TS1128: Declaration or statement expected.
               ~
!!! error TS2304: Cannot find name 'b'.
                   ~
!!! error TS1005: ';' expected.
            super();
            ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
        }
        static get C() {
        ~~~~~~
!!! error TS1128: Declaration or statement expected.
               ~~~
!!! error TS2304: Cannot find name 'get'.
                   ~
!!! error TS1005: ';' expected.
                   ~
!!! error TS2304: Cannot find name 'C'.
                       ~
!!! error TS1005: ';' expected.
            super();
            ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
            return 1;
        }
        static set C(v) {
        ~~~~~~
!!! error TS1128: Declaration or statement expected.
               ~~~
!!! error TS2304: Cannot find name 'set'.
                   ~
!!! error TS1005: ';' expected.
                   ~
!!! error TS2304: Cannot find name 'C'.
                     ~
!!! error TS2304: Cannot find name 'v'.
                        ~
!!! error TS1005: ';' expected.
            super();
            ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
        }
    }
    ~
!!! error TS1128: Declaration or statement expected.